# kaggle_feedback_prize_v1

./: .gitignore  README.md  pyproject.toml
docs/: nltk_error.md
scripts/: create_dataset.py  understand_essay.py
src/: config.py  inference.py  model_class.py  train_model.py
src/inference/: model.py
src/train/: config.py  data_utils.py  main.py  model_class.py  trainer_utils.py
