[project]
name = "kaggle-feedback-prize-v1"
version = "0.1.0"
description = ""
authors = [
    {name = "Yash Kushwaha",email = "37941798+YashKushwaha@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "transformers (>=4.42.0)",
    "torch (>=2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
]
[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.4"
datasets = "^4.0.0"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.3"
accelerate = "^1.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
